Fixed Turkey's star alignment

--- a/css/flags/asia/turkey.css
+++ b/css/flags/asia/turkey.css
@@ -35,32 +35,39 @@
     position: absolute;
     top: 50%;
     left: calc((100% / 3) * 1.5);
-    background-color: #fff;
     -webkit-transform: translate(0, -50%)
         rotate(270deg);
     transform: translate(0, -50%)
         rotate(270deg);
-    /* True centre of the star is offset */
-    -webkit-transform-origin: 50% 55.03%;
-    transform-origin: 50% 55.03%;
-    -webkit-clip-path: polygon(50% 2.45%,
-        61.8% 38.77%,
-        100% 38.77%,
-        69.1% 61.23%,
-        80.9% 97.55%,
-        50% 75.1%,
-        19.1% 97.55%,
-        30.9% 61.23%,
-        0% 38.77%,
-        38.2% 38.77%);
-    clip-path: polygon(50% 2.45%,
-        61.8% 38.77%,
-        100% 38.77%,
-        69.1% 61.23%,
-        80.9% 97.55%,
-        50% 75.1%,
-        19.1% 97.55%,
-        30.9% 61.23%,
-        0% 38.77%,
-        38.2% 38.77%);
+    -webkit-transform-origin: 50% 50%;
+    transform-origin: 50% 50%;
+}
+
+#turkey > .star::after {
+    content: '';
+    width: 100%;
+    /* account for 4.9% empty space @ bottom */
+    height: 104.9%;
+    position: absolute;
+    background-color: #fff;
+    -webkit-clip-path: polygon(50% 0%,
+        61.8% 36.32%,
+        100% 36.32%,
+        69.1% 58.78%,
+        80.9% 95.1%,
+        50% 72.65%,
+        19.1% 95.1%,
+        30.9% 58.78%,
+        0% 36.32%,
+        38.2% 36.32%);
+    clip-path: polygon(50% 0%,
+        61.8% 36.32%,
+        100% 36.32%,
+        69.1% 58.78%,
+        80.9% 95.1%,
+        50% 72.65%,
+        19.1% 95.1%,
+        30.9% 58.78%,
+        0% 36.32%,
+        38.2% 36.32%);
 }
